# icub_kdl

./: README.md
iDyn_KDL_conversion/: KDL2iDyn.cpp  KDL2iDyn.h  iDyn2KDL.cpp  iDyn2KDL.h
icub_model/: icub_urdf_from_iDyn.cpp  idyn2kdl_icub.cpp  idyn2kdl_icub.h
test_idyn_kdl/: CMakeLists.txt  force_test_7links.cpp  force_test_icub_arm.cpp  force_test_no_sensor.cpp  iCubWholeBodyCOM_kdl_idyn.cpp  iDyn_KDL_emulation.cpp  iDyn_KDL_emulation.h
